# cmake_project_template

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  app.cpp
docs/: CMakeLists.txt  MainPage.md
include/libexample/: example.h
scripts/: setup.py
src/: CMakeLists.txt  example.cpp
tests/: CMakeLists.txt  testlib.cpp
